- First pass on usability (merged)   - Users see most properties as input fields, no longer requiring clicking or Save/Cancel   - Users can edit properties by pressing Tab   - No more jumpiness in the properties   - Accordion-style open/close -- click the api heading to show/hide API properties   - New right-side menu for holding the X for deleting operations (and soon, properties)   - Text editor now floats on the right even as you scroll up/down on left side   - Show the user which properties they added by highlighting them in yellow   - Various visual improvements (color, hover effects, alignment)

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -20,14 +20,21 @@ h2 {
 }
 
 .panel {
-  display: inline-block;
   vertical-align: top;
   width: 48%;
+
+  &.editor {
+    height: 100%;
+    left: 50%;
+    position: fixed;
+    top: 0;
+  }
+
 
   ul {
     list-style-type: none;
     margin: 0;
-    padding-left: 30px;
+    padding: 0;
 
     li {
     }
@@ -35,14 +42,17 @@ h2 {
 }
 
 .ace_editor {
-  height: 500px;
+  height: 92%;
   margin: 25px 0 0 25px;
+  position: absolute;
 }
 
 ul.apis {
+
   li {
     .heading {
       border: 1px solid black;
+      cursor: pointer;
       font-size: 16px;
       margin-top: 10px;
       padding: 3px 5px;
@@ -62,6 +72,31 @@ ul.apis {
         width: 150px;
       }
     }
+
+    ul.operations {
+      li {
+        position: relative;
+
+        .right-menu {
+          background-color: white;
+          font-size: 20px;
+          height: 100%;
+          padding-left: 5px;
+          position: absolute;
+          right: -35px;
+          top: 0;
+          width: 30px;
+
+          a {
+            cursor: pointer;
+
+            &:hover {
+              color: red;
+            }
+          }
+        }
+      }
+    }
   }
 
   table.parameters {
@@ -72,6 +107,10 @@ ul.apis {
 
     tbody tr {
       font-size: 14px;
+
+      &.changed {
+        background-color: lightgoldenrodyellow;
+      }
     }
   }
 }
